--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "dependencies": {
     "@mantine/hooks": "^7.1.7",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-headroom": "^3.2.1",
-    "react-image-and-background-image-fade": "^1.0.8",
     "sass": "^1.69.5",
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
