--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/hooks": "^7.1.7",
     "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "lodash": "^4.17.21",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
