--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@mantine/hooks": "^7.1.7",
+    "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "lodash": "^4.17.21",
     "next": "14.0.1",
+    "next-firebase-auth-edge": "^0.10.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
