--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@mantine/hooks": "^7.1.7",
+    "dayjs": "^1.11.10",
     "firebase": "^10.6.0",
+    "firebase-admin": "^11.11.1",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "lodash": "^4.17.21",
@@ -20,6 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-headroom": "^3.2.1",
+    "react-quill": "^2.0.0",
+    "react-select": "^5.8.0",
     "sass": "^1.69.5",
     "swr": "^2.2.4"
   },
